<resources>
    <string name="app_name">MealerApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="login_instructions">Log in using Username and Password</string>
    <string name="register_cook">Register as a Cook</string>
    <string name="register_client">Register as a Client</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error">Please enter a password longer than 7 characters</string>
    <string name="invalid_login">Invalid Credentials</string>
    <string name="previous">Previous</string>

    <string name="register_client_help">Enter valid email and password to register as a Client</string>
    <string name="register_cook_help">Enter valid email and password to register as a Cook</string>

    <string name="from">From:</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--    Fragment 2 -->
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_complaint_list">ComplaintList</string>
    <string name="title_activity_complaint_list_view">ComplaintListView</string>
    <string name="title_activity_cook_list_of_meals">cookListOfMeals</string>
</resources>